mensaje de bienvenida

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     </head>
     <body>
         <h1>
-            ¡Este es mi primer sitio web!
+            ¡que pasa putines..!
         </h1>
     </body>
 </html>
