--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
+<!DOCTYPE html>
+<html lang="es">
 <html>
-    <head>
-    </head>
-    <body>
-        <h1>
-            ¡que pasa putines..!
-        </h1>
-    </body>
+<head>
+     <meta charset="UTF-8">  
+    <meta name="viewport" content="widht=device-widht, initial-scale=1.0">
+    <title>Mi primer sitio web</title>
+ </head>
+<body>
+     <h1>
+     ¡que pasa putines..!
+     </h1>
+</body>
 </html>
