--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  </head>
 <body>
      <h1>
-     ¡que pasa putines..!
+     ¡que pasa putines!¿listos para la accion?
      </h1>
 </body>
 </html>
