--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
 <head>
      <meta charset="UTF-8">  
     <meta name="viewport" content="widht=device-widht, initial-scale=1.0">
-    <title>Mi primer sitio web</title>
+    <title>Mi portafolio - Jhon Frand</title>
+    <link rel="stylesheet" href="css/style.css">
  </head>
 <body>
      <h1>
-     ¡que pasa putines!¿listos para la accion?
+     Mi portafolio
      </h1>
+     <h2>Jhon Frand Lebaza</h2>
+     <p>Bienvenidos  a mi portafolio</p>
+     <ul>
+          <li>Inicio</li>
+          <li><a href="fuentes.html"> Fuentes</a></li>
+     </ul>
+     <h2 class="fuente-especial">Esto es una prueba</h2>
 </body>
 </html>
