--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
      <ul>
           <li>Inicio</li>
           <li><a href="fuentes.html"> Fuentes</a></li>
+          <li><a href="fuente-disney.html"> Fuente Disney</a></li>
+          <li><a href="fuente-got.html"> Fuente GOT</a></li>
+          <li><a href="fuente-netfllix.html"> Fuente NETFLIX</a></li>
+
      </ul>
      <h2 class="fuente-especial">Esto es una prueba</h2>
 </body>
