--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <li><a href="fuente-disney.html"> Fuente Disney</a></li>
           <li><a href="fuente-got.html"> Fuente GOT</a></li>
           <li><a href="fuente-netfllix.html"> Fuente NETFLIX</a></li>
+          <li><a href="colores.html">colores</a></li>
 
      </ul>
      <h2 class="fuente-especial">Esto es una prueba</h2>
