--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
  </head>
 <body>
+
      <h1>
      Mi portafolio
      </h1>
@@ -20,6 +21,7 @@
           <li><a href="fuente-got.html"> Fuente GOT</a></li>
           <li><a href="fuente-netfllix.html"> Fuente NETFLIX</a></li>
           <li><a href="colores.html">colores</a></li>
+          <li><a href="border.html"> BORDES</a></li>
 
      </ul>
      <h2 class="fuente-especial">Esto es una prueba</h2>
